Fixed https://github.com/e-gov/fox/issues/48, https://github.com/e-gov/fox/issues/49
